@@ -1,3 +1,7 @@
+2008-10-26  Alan McGovern  <alan.mcgovern@gmail.com>
+
+	* TrackerManager.cs: Ensure that empty tiers are not added.
+
 2008-06-05  Alan McGovern <alan.mcgovern@gmail.com> 
 
 	* TrackerManager.cs, ConnectionManager.cs: Rename from
